--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knowledge-vizualization",
+  "name": "cloudflare-prolog-template",
   "version": "0.0.1",
   "devDependencies": {
     "wrangler": "latest",
